--- a/po/cs.po
+++ b/po/cs.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: Libfm 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-11 15:20+0200\n"
-"PO-Revision-Date: 2014-05-23 22:28+0000\n"
+"PO-Revision-Date: 2014-05-23 22:32+0000\n"
 "Last-Translator: Jan <jhelebrant@seznam.cz>\n"
 "Language-Team: Czech <radek@fastlinux.eu>\n"
 "Language: cs\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1400884110.0\n"
+"X-POOTLE-MTIME: 1400884329.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -542,10 +542,9 @@ msgid "Invalid desktop entry file: '%s'"
 msgstr "Chybné jméno položky menu %s"
 
 #: ../src/base/fm-file-launcher.c:240
-#, c-format
-#, fuzzy, c-format
+#, c-format, c-format
 msgid "No default application is set to launch URIs %s://"
-msgstr "Pro MIME %s nebyla nalezena výchozí aplikace."
+msgstr "Nebyla nalezena výchozí aplikace pro spuštění URIs %s://"
 
 #: ../src/base/fm-file-launcher.c:308
 #, c-format
@@ -862,6 +861,8 @@ msgid ""
 "Files on this system are hidden if their name starts with a dot ('.'). Hit "
 "<Ctrl+H> to toggle displaying hidden files."
 msgstr ""
+"Soubory v tomto souborovém systému jsou skryté pokud jejich název začíná "
+"tečkou ('.'). Stiskněte <Ctrl+H> pro zapnutí zobrazení skrytých souborů."
 
 #: ../src/gtk/fm-file-properties.c:1026
 msgid "scanning..."
