--- a/po/it.po
+++ b/po/it.po
@@ -8,16 +8,16 @@ msgstr ""
 "Project-Id-Version: LibFM 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-09 09:02+0100\n"
-"PO-Revision-Date: 2013-11-14 18:04+0000\n"
-"Last-Translator: Daniele <daniele@forsi.it>\n"
+"PO-Revision-Date: 2014-08-08 08:56+0000\n"
+"Last-Translator: Daniele Forsi <daniele@forsi.it>\n"
 "Language-Team: Italian\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1384452258.0\n"
+"X-Generator: Pootle 2.6.0-rc1\n"
+"X-POOTLE-MTIME: 1407488188.000000\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -26,6 +26,8 @@ msgstr "Applicazioni preferite"
 #: ../data/libfm-pref-apps.desktop.in.h:2
 msgid "Select applications called on click on Web link or e-mail address"
 msgstr ""
+"Scegli le applicazioni eseguite al clic su un collegamento Web o un "
+"indirizzo e-mail"
 
 #: ../data/lxshortcut.desktop.in.h:1
 msgid "Shortcut Editor"
@@ -44,7 +46,6 @@ msgid "Use selected application to open files"
 msgstr "Utilizza l'applicazione selezionata per aprire i file"
 
 #: ../data/ui/app-chooser.glade.h:3
-#, fuzzy
 msgid "_Installed Applications"
 msgstr "Applicazioni _installate"
 
@@ -99,7 +100,6 @@ msgid "C_ustom Command Line"
 msgstr "Riga di comando personali_zzata"
 
 #: ../data/ui/app-chooser.glade.h:17
-#, fuzzy
 msgid "_Set selected application as default action for this file type"
 msgstr ""
 "Impo_sta l'applicazione selezionata come azione predefinita per questo tipo "
@@ -203,9 +203,8 @@ msgstr "Seleziona l'applicazione utilizzata per aprire i file di questo tipo "
 
 # Tolgo "dei" perché c'è poco spazio e la stessa stringa è usata per singolare e plurale
 #: ../data/ui/file-prop.glade.h:9
-#, fuzzy
 msgid "<b>Total count of files:</b>"
-msgstr "<b>Dimensione totale file:</b>"
+msgstr "<b>Conteggio totale file:</b>"
 
 # Tolgo "dei" perché c'è poco spazio e la stessa stringa è usata per singolare e plurale
 #: ../data/ui/file-prop.glade.h:10
@@ -297,7 +296,6 @@ msgid "None"
 msgstr "Nessuno"
 
 #: ../data/ui/file-prop.glade.h:32
-#, fuzzy
 msgctxt ""
 "It is a directory access bit - 'sticky' - where only owner can delete a file "
 "from it"
@@ -313,7 +311,6 @@ msgid "Sticky & set GID"
 msgstr "Sticky e imposta GID"
 
 #: ../data/ui/file-prop.glade.h:35
-#, fuzzy
 msgctxt "this is a file access mode bit, also known as 'suid'"
 msgid "Set UID"
 msgstr "Imposta UID"
@@ -323,7 +320,6 @@ msgid "Set UID & GID"
 msgstr "Imposta UID e GID"
 
 #: ../data/ui/file-prop.glade.h:37
-#, fuzzy
 msgctxt ""
 "this is a file access mode - only owner can access the file, for others "
 "access is denied"
@@ -379,6 +375,8 @@ msgid ""
 "Pattern may be either POSIX shell pattern list (with ',' as separator) or "
 "POSIX regular expression."
 msgstr ""
+"Il modello può essere un elenco di modelli POSIX per la shell (con «;» come "
+"separatore) o un'espressione regolare POSIX."
 
 #: ../data/ui/filesearch.glade.h:10
 msgid "Case insensiti_ve"
@@ -390,7 +388,7 @@ msgstr "_Usa espressione regolare"
 
 #: ../data/ui/filesearch.glade.h:12
 msgid "<b>Plac_es to Search:</b>"
-msgstr "<b>Posizioni in cui cercare:</b>"
+msgstr "<b>Posizioni in cui c_ercare:</b>"
 
 #: ../data/ui/filesearch.glade.h:13
 msgid "_Search in sub directories"
@@ -414,7 +412,7 @@ msgstr "Cerca solo file dei seguenti tipi:"
 
 #: ../data/ui/filesearch.glade.h:18
 msgid "Te_xt files"
-msgstr "File te_sto"
+msgstr "File di te_sto"
 
 #: ../data/ui/filesearch.glade.h:19
 msgid "_Image files"
@@ -433,19 +431,20 @@ msgid "_Documents"
 msgstr "_Documenti"
 
 #: ../data/ui/filesearch.glade.h:23
-#, fuzzy
 msgid "Folde_rs"
-msgstr "Cartella"
+msgstr "Ca_rtelle"
 
 #: ../data/ui/filesearch.glade.h:24
 msgid "Ot_her:"
-msgstr ""
+msgstr "Altr_i:"
 
 #: ../data/ui/filesearch.glade.h:25
 msgid ""
 "Any valid content type can be entered here. Wildcard '*' is allowed at end "
 "of the type. Multiple types should be separated with ';'."
 msgstr ""
+"Si può inserire qualunque tipo di contenuto valido. Il metacarattere «*» è "
+"permesso alla fine del tipo. Tipi multipli devono essere separati da «;»."
 
 #: ../data/ui/filesearch.glade.h:26
 msgid "File _Type"
@@ -503,7 +502,7 @@ msgstr ""
 
 #: ../data/ui/preferred-apps.glade.h:4
 msgid "<b>Mail Client</b>"
-msgstr "<b>Client posta</b>"
+msgstr "<b>Client di posta</b>"
 
 #: ../data/ui/preferred-apps.glade.h:5
 msgid ""
@@ -511,7 +510,7 @@ msgid ""
 "mail addresses."
 msgstr ""
 "Il client di posta preferito sarà usato per comporre email quando si fa clic "
-"su un indirizzo E-mail."
+"su un indirizzo e-mail."
 
 #: ../data/ui/preferred-apps.glade.h:6
 msgid "<b>Terminal Emulator</b>"
@@ -544,7 +543,6 @@ msgid "<b>Time remaining:</b>"
 msgstr "<b>Tempo restante:</b>"
 
 #: ../data/ui/progress.glade.h:6
-#, fuzzy
 msgid "<b>Errors occurred:</b>"
 msgstr "<b>Sono occorsi alcuni errori:</b>"
 
@@ -664,7 +662,7 @@ msgid ""
 "as &amp;"
 msgstr ""
 "Il riferimento a carattere non termina con un punto e virgola; probabilmente "
-"si è utilizzato un carattere \"e commerciale\" senza l'intenzione di "
+"è stato utilizzato un carattere \"e commerciale\" senza l'intenzione di "
 "iniziare una nuova entità. In tal caso ricorrere a &amp;"
 
 #: ../src/extra/fm-xml-file.c:336
@@ -690,8 +688,8 @@ msgid ""
 "Entity did not end with a semicolon; most likely you used an ampersand "
 "character without intending to start an entity - escape ampersand as &amp;"
 msgstr ""
-"L'entità non termina con un punto e virgola; probabilmente è stata "
-"utilizzata un carattere \"e commerciale\" senza l'intento di iniziare una "
+"L'entità non termina con un punto e virgola; probabilmente è stato "
+"utilizzato un carattere \"e commerciale\" senza l'intento di iniziare una "
 "entità. In tal caso ricorrere a &amp;"
 
 #: ../src/extra/fm-xml-file.c:594
@@ -736,9 +734,9 @@ msgid "Customize"
 msgstr "Personalizza"
 
 #: ../src/gtk/fm-app-chooser-dlg.c:266
-#, fuzzy, c-format
+#, c-format
 msgid "<b>Select an application to open \"%s\" files</b>"
-msgstr "Utilizza l'applicazione selezionata per aprire i file"
+msgstr "<b>Scegliere un'applicazione per aprire i file «%s»</b>"
 
 #: ../src/gtk/fm-app-menu-view.c:224
 msgid "Installed Applications"
@@ -786,13 +784,12 @@ msgid "Open _With..."
 msgstr "Apri _con..."
 
 #: ../src/gtk/fm-file-menu.c:153
-#, fuzzy
 msgid "Open _With"
-msgstr "Apri _con..."
+msgstr "Apri _con"
 
 #: ../src/gtk/fm-file-menu.c:158
 msgid "Copy Pa_th(s)"
-msgstr ""
+msgstr "Copia pe_rcorsi"
 
 #: ../src/gtk/fm-file-menu.c:159
 msgid "H_ide"
@@ -807,9 +804,8 @@ msgid "_Add to Bookmarks"
 msgstr "A_ggiungi ai segnalibri"
 
 #: ../src/gtk/fm-file-menu.c:162
-#, fuzzy
 msgid "_Rename..."
-msgstr "_Rinomina"
+msgstr "_Rinomina..."
 
 #: ../src/gtk/fm-file-menu.c:163
 msgid "Co_mpress..."
@@ -834,7 +830,7 @@ msgstr "Sposta nel ces_tino"
 
 #: ../src/gtk/fm-file-menu.c:773
 msgid "Your bookmarks already have a bookmark for this folder."
-msgstr ""
+msgstr "Esiste già un segnalibro per questa cartella."
 
 #: ../src/gtk/fm-file-properties.c:368
 msgid "Image files"
@@ -849,11 +845,11 @@ msgstr[1] "byte"
 #: ../src/gtk/fm-file-properties.c:510
 #, c-format
 msgid "scanning... %d"
-msgstr ""
+msgstr "scansione... %d"
 
 #: ../src/gtk/fm-file-properties.c:588
 msgid "Please enter a valid user name or numeric id."
-msgstr "Per favore digita un nome utente o un id numerico valido."
+msgstr "Digitare un nome utente o un id numerico valido."
 
 #: ../src/gtk/fm-file-properties.c:618
 msgid "Please enter a valid group name or numeric id."
@@ -884,9 +880,8 @@ msgstr ""
 "(«.»). Premere Ctrl+H per nascondere o mostrare i file nascosti."
 
 #: ../src/gtk/fm-file-properties.c:1026
-#, fuzzy
 msgid "scanning..."
-msgstr "Caricamento..."
+msgstr "scansione..."
 
 #: ../src/gtk/fm-file-properties.c:1088
 msgid "<b>_Access content:</b>"
@@ -935,7 +930,7 @@ msgstr "Posizione"
 
 #: ../src/gtk/fm-folder-model.c:197
 msgid "Extension"
-msgstr ""
+msgstr "Estensione"
 
 #: ../src/gtk/fm-folder-view.c:178
 msgid "Create _New..."
@@ -958,13 +953,12 @@ msgid "_Sort Files"
 msgstr "_Ordina file"
 
 #: ../src/gtk/fm-folder-view.c:196
-#, fuzzy
 msgid "_Rename Folder..."
-msgstr "_Rinomina cartella"
+msgstr "_Rinomina cartella..."
 
 #: ../src/gtk/fm-folder-view.c:197
 msgid "Folder Prop_erties"
-msgstr "Propri_età del file"
+msgstr "Propri_età della cartella"
 
 #: ../src/gtk/fm-folder-view.c:205
 msgid "Show _Hidden"
@@ -1150,9 +1144,8 @@ msgid "_Rename Bookmark Item"
 msgstr "_Rinomina segnalibro"
 
 #: ../src/gtk/fm-places-view.c:151
-#, fuzzy
 msgid "Re_move from Bookmarks"
-msgstr "Ri_muovi segnalibro"
+msgstr "Ri_muovi dai segnalibri"
 
 #: ../src/gtk/fm-places-view.c:152
 msgid "Move Bookmark _Up"
@@ -1169,7 +1162,7 @@ msgstr "Svuota c_estino"
 #: ../src/gtk/fm-places-view.c:533 ../src/gtk/fm-side-pane.c:643
 msgid "Shows list of common places, devices, and bookmarks in sidebar"
 msgstr ""
-"Mostrare l'elenco di posti, dispositivi e segnalibri nel riquadro laterale"
+"Mostra l'elenco di posti, dispositivi e segnalibri nel riquadro laterale"
 
 #: ../src/gtk/fm-places-view.c:1102
 msgid "Rename Bookmark Item"
@@ -1206,15 +1199,16 @@ msgstr ""
 #: ../src/gtk/fm-progress-dlg.c:326
 msgid "<b>Errors occured before file operation was stopped.</b>"
 msgstr ""
+"<b>Sono occorsi degli errori prima che l'operazione sui file fosse "
+"fermata.</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:328
 msgid "Cancelled"
 msgstr "Annullato"
 
 #: ../src/gtk/fm-progress-dlg.c:332
-#, fuzzy
 msgid "<b>The file operation was completed with errors.</b>"
-msgstr "L'operazione sul file è stata annullata e ci sono alcuni errori."
+msgstr "<b>L'operazione sui file è stata completata con errori.</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:334
 msgid "Finished"
@@ -1244,66 +1238,61 @@ msgstr ", "
 
 #. translators: it is part of "Moving files:" or "Moving xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:579
-#, fuzzy
 msgid "Moving"
-msgstr "Spostamento file"
+msgstr "Spostamento"
 
 #. translators: it is part of "Copying files:" or "Copying xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:583
-#, fuzzy
 msgid "Copying"
-msgstr "Copia file"
+msgstr "Copia"
 
 #. translators: it is part of "Trashing files:" or "Trashing xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:587
-#, fuzzy
 msgid "Trashing"
-msgstr "Spostamento file nel cestino"
+msgstr "Spostamento nel cestino"
 
 #. translators: it is part of "Deleting files:" or "Deleting xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:591
-#, fuzzy
 msgid "Deleting"
-msgstr "Eliminazione file"
+msgstr "Eliminazione"
 
 #. translators: it is part of "Symlinking files:" or "Symlinking xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:595
 msgid "Symlinking"
-msgstr ""
+msgstr "Creazione collegamento simbolico"
 
 #. translators: it is part of "Changing attributes of files:" or "Changing attributes of xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:602
-#, fuzzy
 msgid "Changing attributes of"
-msgstr "Cambiamento attributi file"
+msgstr "Cambiamento attributi di"
 
 #. translators: it is part of "Restoring files:" or "Restoring xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:606
-#, fuzzy
 msgid "Restoring"
-msgstr "_Ripristina"
+msgstr "Ripristino"
 
 #. note to translators: resulting string is such as "Deleting files"
 #: ../src/gtk/fm-progress-dlg.c:613
-#, fuzzy, c-format
+#, c-format
 msgid "%s files"
-msgstr "file immagine"
+msgstr "file %s"
 
+# Per convenzione Il Translator Project italiano mette o i puntini di sospensione i "in corso"
 #: ../src/gtk/fm-progress-dlg.c:615
 msgid "<b>File operation is in progress...</b>"
-msgstr ""
+msgstr "<b>L'operazione sui file è in corso</b>"
 
 #. note to translators: resulting string is such as "Deleting file"
 #: ../src/gtk/fm-progress-dlg.c:619
-#, fuzzy, c-format
+#, c-format
 msgid "<b>%s file:</b>"
-msgstr "<b>File:</b>"
+msgstr "<b>%s file:</b>"
 
 #. note to translators: resulting string is such as "Deleting files"
 #: ../src/gtk/fm-progress-dlg.c:622
-#, fuzzy, c-format
+#, c-format
 msgid "<b>%s files:</b>"
-msgstr "<b>File:</b>"
+msgstr "<b>%s file:</b>"
 
 #: ../src/gtk/fm-side-pane.c:66
 msgid "_Off"
@@ -1512,7 +1501,7 @@ msgstr "«%s» non è una voce di menu"
 #: ../src/modules/vfs-menu.c:2052
 #, c-format
 msgid "The '%s' entry file is broken"
-msgstr "Il file entrata «%s» è danneggiato"
+msgstr "L'elemento file «%s» è danneggiato"
 
 #: ../src/modules/vfs-menu.c:2338 ../src/modules/vfs-menu.c:2427
 #, c-format
@@ -1575,7 +1564,7 @@ msgstr "<b>_Directory corrente:</b>"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:351
 msgid "The working directory to run the program in"
-msgstr "La directory di lavoro in ciu eseguire il programma"
+msgstr "La directory di lavoro in cui eseguire il programma"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:359
 msgid "<b>_Tooltip:</b>"
@@ -1593,7 +1582,7 @@ msgstr "_Usa notifica all'avvio"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:388
 msgid "_Desktop Entry"
-msgstr "_Entrata scrivania"
+msgstr "_Elemento scrivania"
 
 #: ../src/modules/gtk-menu-trash.c:72
 msgid "_Restore"
@@ -1605,7 +1594,7 @@ msgstr "Ripristina i file del cestino ai loro percorsi originali"
 
 #: ../src/tools/lxshortcut.c:42
 msgid "source file name or desktop id"
-msgstr "nome file sorgente o identificativo del desktop"
+msgstr "nome file sorgente o id del desktop"
 
 #: ../src/tools/lxshortcut.c:42
 msgid "SOURCE"
